--- a/styles/main.css
+++ b/styles/main.css
@@ -227,3 +227,7 @@ nav {
 	background-color: rgba(0, 0, 0, 0.6);
 	z-index: 1001;
 }
+
+.noScroll {
+	overflow: hidden;
+}
